--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
 
 <body>
-  <img class="topo" src="img/1.jpeg" alt="">
+  <img class="topo" src="img/Intro É Notícia Correia Pinto - Variação Aprimorada 2.jpg" alt="">
   <div class="film-strip">
       <div class="frame">
         <img src="img/Com investimentos de mais de 1,4 milhões de reais a prefeitura de Correia Pinto vai entregar log.jpg">
@@ -51,25 +51,25 @@
     <!-- Conteúdo principal -->
     <main class="principal">
       <article class="noticia">
-        <img src="img/materia 1.jpg" alt="matéria 1">
+        <img src="img/ChatGPT Image 6 de out. de 2025, 22_51_55.png" alt="matéria 1">
         <div>
-          <h2>Novo Bombeiro é construído</h2>
-          <p>Por meio de convênio, o município repassou ao governo do Estado de Santa Catarina, recursos do extinto FUNREBOM para construção do novo quartel do corpo de bombeiros militar.</p>
+          <h2>Novo PodCast em Correia Pinto</h2>
+          <p>Não percam sexta feira o lançamento do PodCast "conversa entre amigos"</p>
           <a href="materia 1.html">Leia mais</a>
         </div>
       </article>
 
       <!-- Banner inline (só aparece no mobile) -->
     <div class="banner-inline">
-          <img src="img/3cima.jpg" alt="propaganda inline">
+          <img src="img/ChatGPT Image 6 de out. de 2025, 22_51_55.png" alt="propaganda inline">
       </div>
 
       <article class="noticia">
         <img src="img/bombeiro.jpg" alt="Imagem da notícia">
         <div>
-          <h2>Outra notícia em destaque</h2>
-          <p>Descrição breve da matéria em destaque. Aqui entra um resumo rápido para atrair o clique.</p>
-          <a href="#">Leia mais</a>
+          <h2>Novo PodCast em Correia Pinto</h2>
+          <p>Não percam sexta feira o lançamento do PodCast "conversa entre amigos"</p>
+          <a href="materia 1.html">Leia mais</a>
         </div>
       </article>
       
