--- a/materia 1.html
+++ b/materia 1.html
@@ -1,30 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ÉNotícia</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive.css" media="screen">
-    <link rel="icon" type="image/png" href="img/logo.png"/>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>ÉNotícia</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/png" href="img/logo.png"/>
+    </head>
 
 <body>
-    <div class="button">
-        <a href="Pagina 04.html"><button>Próxima</button></a> 
-     </div>
+  <img class="topo" src="img/Intro É Notícia Correia Pinto - Variação Aprimorada 2.jpg" alt="">
+  <div class="film-strip">
+      <div class="frame">
+        <img src="img/Com investimentos de mais de 1,4 milhões de reais a prefeitura de Correia Pinto vai entregar log.jpg">
+      </div>
+      <div class="frame">
+        <img src="img/Imagem do WhatsApp de 2025-09-27 à(s) 11.31.20_f58a138b.jpg">
+      </div>
+      <div class="frame">
+        <img src="img/bombeiro.jpg">
+      </div>
+      <div class="frame">
+        <img src="foto4.jpg">
+      </div>
+      <!-- pode continuar repetindo -->
+  </div>
+  <!-- Cabeçalho -->
+  <header>
+    <nav>
+      <div class="logo">ÉNotícia</div>
+      <ul class="nav-list">
+        <li><a href="#">Início</a></li>
+        <li><a href="#">YouTube</a></li>
+        <li><a href="https://www.instagram.com/jornalenoticia2025/" target="_blank">Instagram</a></li>
+        <li><a href="https://www.facebook.com/sergio.andrade.677113" target="_blank">Facebook</a></li>
+        <li><a href="#">TikTok</a></li>
+      </ul>
+      <!-- Menu Mobile -->
+      <div class="mobile-menu" id="mobileBtn" aria-label="menu">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+    </nav>
+  </header>
 
-    <div class="cabeçalhopg3">
-    </div>
+  <!-- Layout principal -->
+  <div class="container">
+    <!-- Conteúdo principal -->
+    <main class="principal">
+      <article class="noticia">
+        <div>
+          <h2>Novo PodCast em Correia Pinto</h2>
+          <p>Não percam sexta feira o lançamento do PodCast "conversa entre amigos"</p>
+          <video 
+            src="img/Vídeo do WhatsApp de 2025-10-06 à(s) 22.41.49_76ee4878.mp4"
+            autoplay 
+            muted 
+            playsinline 
+            controls 
+            loop
+            ></video>
+          <a href="materia 1.html"></a>
+        </div>
+      </article>
 
-    <div class="agricultura">
-    </div>
+      <!-- Banner inline (só aparece no mobile) -->
+    <div class="banner-inline">
+          <img src="img/ChatGPT Image 6 de out. de 2025, 22_51_55.png" alt="propaganda inline">
+      </div>
 
-    <div class="terreno">
-    </div>
+      <article class="noticia">
+        <div>
+          <h2></h2>
+          <p></p>
+          <a href="materia 1.html"></a>
+        </div>
+      </article>
+      
+      <!-- Outro banner inline -->
+      <div class="banner-inline">
+        <img src="img/lucio.jpeg" alt="propaganda inline 2">
+      </div>
 
-     <img src="img/Pagina03_page-0001.jpg" alt="" class="pg2">
-    
+      <article class="noticia">
+        <div>
+          <h2></h2>
+          <p></p>
+          <a href="#"></a>
+        </div>
+      </article>
+    </main>
+
+
+
+    <!-- Barra lateral -->
+    <aside class="sidebar">
+      <h3>Assuntos em alta</h3>
+      <ul>
+        <li><a href="#">Secretário diz que é preciso 'consertar' o Brasil</a></li>
+        <li><a href="#">Lula participa de evento do MEC</a></li>
+        <li><a href="#">Tiroteio deixa 2 mortos e 8 feridos nos EUA</a></li>
+        <li><a href="#">Filha alerta pai durante ligação com tio</a></li>
+      </ul>
+    </aside>
+  </div>
+
+  <!-- Banners laterais -->
+   <div class="banner banner-left">
+    <img src="img/3cima.jpg" alt="propaganda esquerda">
+  </div>
+  <div class="banner banner-right">
+    <img src="img/lucio.jpeg" alt="propaganda direita">
+  </div>
+
+
+
+ 
+
+  <!-- Rodapé -->
+  <footer>
+    <p> </p>
+  </footer>
+
+  <script src="mobile-navbar.js"></script>
 </body>
 </html>
