--- a/materia 1.html
+++ b/materia 1.html
@@ -31,7 +31,7 @@
     <nav>
       <div class="logo">ÉNotícia</div>
       <ul class="nav-list">
-        <li><a href="#">Início</a></li>
+        <li><a href="index.html">Início</a></li>
         <li><a href="#">YouTube</a></li>
         <li><a href="https://www.instagram.com/jornalenoticia2025/" target="_blank">Instagram</a></li>
         <li><a href="https://www.facebook.com/sergio.andrade.677113" target="_blank">Facebook</a></li>
