--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
           <a href="materia 1.html">Leia mais</a>
         </div>
       </article>
+      <div class="banner-inline">
+        <img src="img/Brilho e Qualidade para Seu Carro.png" alt="propaganda inline 2">
+      </div>
 
       <article class="noticia">
         <img src="img/bombeiro.jpg" alt="Imagem da notícia">
@@ -57,7 +60,7 @@
       
       <!-- Outro banner inline -->
       <div class="banner-inline">
-        <img src="img/lucio.jpeg" alt="propaganda inline 2">
+        <img src="img/kicopias.jpg" alt="propaganda inline 2">
       </div>
 
       <article class="noticia">
@@ -86,10 +89,10 @@
 
   <!-- Banners laterais -->
    <div class="banner banner-left">
-    <img src="img/3cima.jpg" alt="propaganda esquerda">
+    <img src="img/Brilho e Qualidade para Seu Carro.png" alt="propaganda esquerda">
   </div>
   <div class="banner banner-right">
-    <img src="img/lucio.jpeg" alt="propaganda direita">
+    <img src="img/kicopias.jpg" alt="propaganda direita">
   </div>
 
 
