--- a/materia 1.html
+++ b/materia 1.html
@@ -55,7 +55,7 @@
 
       <!-- Banner inline (só aparece no mobile) -->
     <div class="banner-inline">
-          <img src="img/ChatGPT Image 6 de out. de 2025, 22_51_55.png" alt="propaganda inline">
+          <img src="img/Brilho e Qualidade para Seu Carro.png" alt="propaganda inline">
       </div>
 
       <article class="noticia">
@@ -68,7 +68,7 @@
       
       <!-- Outro banner inline -->
       <div class="banner-inline">
-        <img src="img/lucio.jpeg" alt="propaganda inline 2">
+        <img src="img/kicopias.jpg" alt="propaganda inline 2">
       </div>
 
       <article class="noticia">
@@ -96,10 +96,10 @@
 
   <!-- Banners laterais -->
    <div class="banner banner-left">
-    <img src="img/3cima.jpg" alt="propaganda esquerda">
+    <img src="img/Brilho e Qualidade para Seu Carro.png" alt="propaganda esquerda">
   </div>
   <div class="banner banner-right">
-    <img src="img/lucio.jpeg" alt="propaganda direita">
+    <img src="img/kicopias.jpg" alt="propaganda direita">
   </div>
 
 
