--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
       </div>
 
       <article class="noticia">
-        <img src="img/bombeiro.jpg" alt="Imagem da notícia">
+        <img src="img/lucia.jpg" alt="Imagem da notícia">
         <div>
-          <h2>Novo PodCast em Correia Pinto</h2>
-          <p>Não percam sexta feira o lançamento do PodCast "conversa entre amigos"</p>
-          <a href="materia 1.html">Leia mais</a>
+          <h2>📰 “Governante que não resolve os problemas deve pedir pra sair”, afirma líder municipal</h2>
+          <p>População Correiapintense quebra o silêncio e se manifesta nas redes sociais mostrando a insatisfação com o atual governo</p>
+          <a href="materia 2.html">Leia mais</a>
         </div>
       </article>
       
