--- a/materia 2.html
+++ b/materia 2.html
@@ -39,17 +39,17 @@
     <main class="principal">
       <article class="noticia">
         <div>
-          <h2>Novo PodCast em Correia Pinto</h2>
-          <p>Não percam sexta feira o lançamento do PodCast "conversa entre amigos"</p>
+          <h2>📰 “Governante que não resolve os problemas deve pedir pra sair”, afirma líder municipal</h2>
+          <p>População Correiapintense quebra o silêncio e se manifesta nas redes sociais mostrando a insatisfação com o atual governo</p>
           <video 
-            src="img/Vídeo do WhatsApp de 2025-10-06 à(s) 22.41.49_76ee4878.mp4"
+            src="img/lucia 1.mp4"
             autoplay 
             muted 
             playsinline 
             controls 
             loop
             ></video>
-          <a href="materia 1.html"></a>
+          <a href="materia 2.html"></a>
         </div>
       </article>
 
@@ -59,11 +59,11 @@
       </div>
 
       <article class="noticia">
-        <img src="img/lucia.jpg" alt="Imagem da notícia">
+        <img src="img/ChatGPT Image 6 de out. de 2025, 22_51_55.png" alt="matéria 1">
         <div>
-          <h2>📰 “Governante que não resolve os problemas deve pedir pra sair”, afirma líder municipal</h2>
-          <p>População Correiapintense quebra o silêncio e se manifesta nas redes sociais mostrando a insatisfação com o atual governo</p>
-          <a href="materia 2.html">Leia mais</a>
+          <h2>Novo PodCast em Correia Pinto</h2>
+          <p>Não percam sexta feira o lançamento do PodCast "conversa entre amigos"</p>
+          <a href="materia 1.html">Leia mais</a>
         </div>
       </article>
       
