--- a/materia 2.html
+++ b/materia 2.html
@@ -42,7 +42,7 @@
           <h2>📰 “Governante que não resolve os problemas deve pedir pra sair”, afirma líder municipal</h2>
           <p>População Correiapintense quebra o silêncio e se manifesta nas redes sociais mostrando a insatisfação com o atual governo</p>
           <video 
-            src="img/lucia 1.mp4"
+            src="img/lucia-1_Nbf0TOQ8.mp4"
             autoplay 
             muted 
             playsinline 
