--- a/materia 1.html
+++ b/materia 1.html
@@ -19,10 +19,10 @@
       <div class="logo">ÉNotícia</div>
       <ul class="nav-list">
         <li><a href="index.html">Início</a></li>
-        <li><a href="#">YouTube</a></li>
+        <li><a href="https://www.youtube.com/channel/UClmx5qVa6AfNjGALOICo3ZA">YouTube</a></li>
         <li><a href="https://www.instagram.com/jornalenoticia2025/" target="_blank">Instagram</a></li>
         <li><a href="https://www.facebook.com/sergio.andrade.677113" target="_blank">Facebook</a></li>
-        <li><a href="#">TikTok</a></li>
+        <li><a href="https://www.tiktok.com/@user6109014228530?is_from_webapp=1&sender_device=pc">TikTok</a></li>
       </ul>
       <!-- Menu Mobile -->
       <div class="mobile-menu" id="mobileBtn" aria-label="menu">
