--- a/materia 06.html
+++ b/materia 06.html
@@ -37,32 +37,19 @@
   <div class="container">
     <!-- Conteúdo principal -->
     <main class="principal">
-       <article class="noticia">
-        <img src="img/betaov.png" alt="matéria 1">
+      <article class="noticia">
         <div>
           <h2>Vereador Betao garante não ter mentido</h2>
-          <p>Vereador Betao garante não ter mentido</p>
-          <a href="materia 06.html">Leia mais</a>
+          <p>Vereador Betao garante não ter mentido
+            <a href="https://www.tiktok.com/@user6109014228530/video/7566807584104090936?is_from_webapp=1&sender_device=pc">Depoimento do Vereador</a>
+          </p>
+          <a href="materia 1.html"></a>
         </div>
       </article>
-      <article class="noticia">
-        <img src="img/ChatGPT Image 6 de out. de 2025, 22_51_55.png" alt="matéria 1">
-        <div>
-          <h2>Resumo da viagem de Brasilia</h2>
-          <p>Vereadores vão a Brasilia</p>
-          <a href="materia 05.html">Leia mais</a>
-        </div>
-      </article>
-      <article class="noticia">
-        <img src="img/ChatGPT Image 6 de out. de 2025, 22_51_55.png" alt="matéria 1">
-        <div>
-          <h2>Novo PodCast em Correia Pinto</h2>
-          <p>Não percam sexta feira o lançamento do PodCast "conversa entre amigos"</p>
-          <a href="materia 1.html">Leia mais</a>
-        </div>
-      </article>
-      <div class="banner-inline">
-        <img src="img/Brilho e Qualidade para Seu Carro.png" alt="propaganda inline 2">
+
+      <!-- Banner inline (só aparece no mobile) -->
+    <div class="banner-inline">
+          <img src="img/Brilho e Qualidade para Seu Carro.png" alt="propaganda inline">
       </div>
 
       <article class="noticia">
@@ -80,17 +67,12 @@
       </div>
 
       <article class="noticia">
-        <img src="img/Com investimentos de mais de 1,4 milhões de reais a prefeitura de Correia Pinto vai entregar log.jpg" alt="matéria 2">
         <div>
-          <h2>Correia Pinto investe em obras</h2>
-          <p>A prefeitura anunciou investimentos superiores a 1,4 milhões de reais para melhorias urbanas no município.</p>
-          <a href="#">Leia mais</a>
+          <h2></h2>
+          <p></p>
+          <a href="#"></a>
         </div>
       </article>
-      <!-- Outro banner inline -->
-      <div class="banner-inline">
-        <img src="img/lucio.jpeg" alt="propaganda inline 2">
-      </div>
     </main>
 
 
@@ -111,11 +93,8 @@
    <div class="banner banner-left">
     <img src="img/Brilho e Qualidade para Seu Carro.png" alt="propaganda esquerda">
   </div>
-  <div class="banner banner-right2">
-    <img src="img/kicopias.jpg" alt="propaganda direita">
-  </div>
   <div class="banner banner-right">
-    <img src="img/lucio.jpeg" alt="propaganda direita">
+    <img src="img/kicopias.jpg" alt="propaganda direita">
   </div>
 
 
