--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
   <div class="container">
     <!-- Conteúdo principal -->
     <main class="principal">
+        <article class="noticia">
+        <img src="img/mulher.jpg" alt="matéria 1">
+        <div>
+          <h2>Eu Eliane Monteiro lutei, clamei e venci no nome santo de Jesus</h2>
+          <p>Eu Eliane Monteiro lutei, clamei e venci no nome santo de Jesus</p>
+          <a href="materia 07.html">Leia mais</a>
+        </div>
+      </article>
        <article class="noticia">
         <img src="img/betaov.png" alt="matéria 1">
         <div>
@@ -87,10 +95,6 @@
           <a href="#">Leia mais</a>
         </div>
       </article>
-      <!-- Outro banner inline -->
-      <div class="banner-inline">
-        <img src="img/lucio.jpeg" alt="propaganda inline 2">
-      </div>
     </main>
 
 
@@ -111,11 +115,9 @@
    <div class="banner banner-left">
     <img src="img/Brilho e Qualidade para Seu Carro.png" alt="propaganda esquerda">
   </div>
-  <div class="banner banner-right2">
+  <div class="banner banner-right">
     <img src="img/kicopias.jpg" alt="propaganda direita">
   </div>
-  <div class="banner banner-right">
-    <img src="img/lucio.jpeg" alt="propaganda direita">
   </div>
 
 
